# workspace

./: .env.example  .gitignore  Vagrantfile  develop.yml  dify_rag_terminology_presentation_final.html  nfs.yml  pyproject.toml  raspi-host  readme.md  samba.yml  server-cluster-main_2.7z  youtube-dl.py
.claude/: settings.json
infra/: ubuntu-set-unsible.sh
script/: install slack app.md  raspi-host  youtube-dl.py
script/files/: download_encrypted_files.py  send_encrypted.py  send_encrypted_files.py
script/raspi/: init.yml  samba.yml
script/youtube-server/: get.py  get_by_playlist.py  settings.yaml  youtube-server.yml
script/youtube-server/sample/: list.csv  list.csv.sample
script/youtube-server/videos/: list.csv
youtube-server/: youtube-dl.py  youtube-server.yml
